finally solved the bug with the textview not getting the proper size for rendering by abandoning the css for it and using tags! which also pretty easily allowed for recoloring of the stage display to help legibility to know what has been inputted. the code for all that ended up getting fairly verbose, might make a new textview class to hide away all styling code in that. also added css for having active stage label be fully opaque, again to help legibility. also disable animation when timer is not visible so there arent all those calls when the applet isnt even being shown

--- a/data/style/style.css
+++ b/data/style/style.css
@@ -1,12 +1,6 @@
 stackswitcher.ptimer button label {
     font-family: lato;
 }
-textview.ptimer-stage-time {
-    font-family: lato;
-    font-weight: 300;
-    letter-spacing: 3px;
-    font-size: 40px;
-}
 label.ptimer-title {
     font-family: lato;
     font-size: 15px;
@@ -14,8 +8,10 @@ label.ptimer-title {
 }
 label.ptimer-stage-label {
     font-family: lato;
-    font-size: 15px;
-    opacity: 0.75;
+    font-size: 18px;
+}
+label.ptimer-stage-label-low-alpha {
+    opacity: 0.65;
 }
 label.ptimer-text {
     font-family: lato;
